facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__struct_with_renamed_field.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct Person {\n            #[facet(rename = \"firstName\")]\n            first_name: String,\n            #[facet(rename = \"lastName\")]\n            last_name: String,\n            age: u32,\n        }\n        \"#)"
---
#[used]
static PERSON_SHAPE: &'static ::facet::Shape = <Person as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Person {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("firstName")
                    .shape(|| ::facet::shape_of(&|s: &Person| &s.first_name))
                    .offset(::core::mem::offset_of!(Person, first_name))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [::facet::FieldAttribute::Rename("firstName")] })
                    .build(),
                ::facet::Field::builder()
                    .name("lastName")
                    .shape(|| ::facet::shape_of(&|s: &Person| &s.last_name))
                    .offset(::core::mem::offset_of!(Person, last_name))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [::facet::FieldAttribute::Rename("lastName")] })
                    .build(),
                ::facet::Field::builder()
                    .name("age")
                    .shape(|| ::facet::shape_of(&|s: &Person| &s.age))
                    .offset(::core::mem::offset_of!(Person, age))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [] })
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(f, "Person"));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::StructDef::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
