facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__tuple_struct_doc_comment.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[repr(transparent)]\n        /// This is a struct for sure\n        struct Blah(u32);\n        \"#)"
---
#[used]
static BLAH_SHAPE: &'static ::facet::Shape = <Blah as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Blah {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [::facet::Field::builder()
                .name("0")
                .shape(|| ::facet::shape_of(&|s: &Blah| &s.0))
                .offset(::core::mem::offset_of!(Blah, 0))
                .flags(::facet::FieldFlags::EMPTY)
                .attributes(&const { [] })
                .build()]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "Blah"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::StructDef::builder()
                    .kind(::facet::StructKind::TupleStruct)
                    .fields(fields)
                    .build(),
            ))
            .doc(&[" This is a struct for sure"])
            .build()
    };
}
